test_suite/tests/ui/conflict/alias-enum.stderr
error[E0425]: cannot find value `__FAIL__` in this scope
  --> tests/ui/conflict/alias-enum.rs:74:5
   |
74 |     __FAIL__;
   |     ^^^^^^^^ not found in this scope
